@@ -10,6 +10,11 @@
 - added: `String.parseCSV([delimiter])` returns `Object Array`
 - added: a new config key `default_crypto` it can rewrite Total.js crypto mechanism (default: `undefined`)
 - added: a new config key `default_crypto_iv` it's an initialization vector (default: generated from `secret`) or it can contain a custom `hex` value
+- added: `U.parseUA(user_agent)` a simple user-agent parser
+- added: commands `INSTALL('command', 'command_name', function)` for registering commands and `CMD(name, [a], [b], [c], [d])` for executing commands
+- added: a new command `clear_dnscache` for clearing DNS cache
+- added: `U.encryptVAL()` for encrypt value
+- added: `U.decryptVAL()` for decrypt value
 
 - updated: `$.invalid()` without arguments can return a function `function(err)`
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
